--- a/thegame/index.html
+++ b/thegame/index.html
@@ -23,7 +23,7 @@
             <a class="" href="../404/index.html">
                 more
             </a>
-            <a href="../site.html">
+            <a href="../index.html">
                 home
             </a>
             <div class="mainu-toogle dropdown dropdown-6">
@@ -38,7 +38,7 @@
         <hr class="mainu-hr">
         <a href="../404/index.html" class="mainu_item2 mainu-item">more</a>
         <hr  class="mainu-hr">
-        <a href="../site.html" class="mainu_item3 mainu-item">home</a>
+        <a href="../index.html" class="mainu_item3 mainu-item">home</a>
     </div>
     <section class="score-contner">
         </div>
